--- a/src/main/resources/com/example/experiment1/Main.fxml
+++ b/src/main/resources/com/example/experiment1/Main.fxml
@@ -16,40 +16,44 @@
    <children>
       <TableView fx:id="progressOverview" layoutX="5.0" layoutY="595.0" prefHeight="300.0" prefWidth="790.0">
         <columns>
-          <TableColumn fx:id="POPID" prefWidth="75.0" text="PID" />
-          <TableColumn fx:id="POStatus" prefWidth="125.0" text="Status" />
-            <TableColumn fx:id="POPriority" prefWidth="100.0" text="Priority" />
-            <TableColumn fx:id="POTime" prefWidth="130.0" text="Time/Remaining" />
-            <TableColumn fx:id="POWaiting" prefWidth="100.0" text="WatingTime" />
-            <TableColumn fx:id="PONext" prefWidth="100.0" text="NextProgress" />
+          <TableColumn fx:id="POPID" prefWidth="65.0" text="PID" />
+          <TableColumn fx:id="POStatus" prefWidth="105.0" text="Status" />
+            <TableColumn fx:id="POFormer" prefWidth="65.0" text="Former" />
+            <TableColumn fx:id="POPriority" prefWidth="65.0" text="Priority" />
+            <TableColumn fx:id="POTime" prefWidth="65.0" text="Time" />
+            <TableColumn fx:id="PORemain" prefWidth="65.0" text="Remain" />
+            <TableColumn fx:id="POSize" text="Size" />
+            <TableColumn fx:id="POStart" prefWidth="100.0" text="Start" />
+            <TableColumn fx:id="PONext" prefWidth="100.0" text="Next Start" />
             <TableColumn fx:id="POHangup" text="Hang Up" />
-            <TableColumn fx:id="PORelease" text="Release" />
         </columns>
       </TableView>
       <TableView fx:id="systemLog" layoutX="800.0" layoutY="595.0" prefHeight="300.0" prefWidth="790.0">
         <columns>
-          <TableColumn prefWidth="75.0" text="PID" />
-          <TableColumn prefWidth="150.0" text="Time" />
-            <TableColumn prefWidth="565.0" text="Content" />
+          <TableColumn fx:id="SLTime" prefWidth="150.0" text="Time" />
+          <TableColumn fx:id="SLPID" prefWidth="75.0" text="PID" />
+            <TableColumn fx:id="SLContent" prefWidth="565.0" text="Content" />
         </columns>
       </TableView>
-      <GridPane alignment="CENTER" layoutX="40.0" layoutY="331.0" prefHeight="115.0" prefWidth="233.0">
+      <GridPane alignment="CENTER" layoutX="40.0" layoutY="240.0" prefHeight="206.0" prefWidth="233.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="234.0" minWidth="10.0" prefWidth="83.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="316.0" minWidth="10.0" prefWidth="160.0" />
         </columnConstraints>
         <rowConstraints>
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="PID:">
+            <Label text="Former:">
                <font>
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label text="Time:" GridPane.rowIndex="1">
+            <Label text="PID:" GridPane.rowIndex="1">
                <font>
                   <Font size="18.0" />
                </font>
@@ -59,9 +63,21 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField fx:id="addPID" GridPane.columnIndex="1" />
-            <TextField fx:id="addTime" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField fx:id="addPriority" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <Label text="Time:" GridPane.rowIndex="3">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <Label text="Size:" GridPane.rowIndex="4">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Label>
+            <TextField fx:id="addFormer" promptText="former progress PID" GridPane.columnIndex="1" />
+            <TextField fx:id="addPID" promptText="set progress ID" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+            <TextField fx:id="addPriority" promptText="set progress priority" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+            <TextField fx:id="addTime" promptText="set running time" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="addSize" promptText="set progress size" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Label layoutX="800.0" layoutY="568.0" prefHeight="24.0" prefWidth="790.0" text=" System Log：">
@@ -79,12 +95,12 @@
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="randomAdd" layoutX="40.0" layoutY="497.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="155.0" text="Random Add">
+      <Button fx:id="randomAdd" layoutX="40.0" layoutY="497.0" mnemonicParsing="false" onAction="#randomAdd" prefHeight="36.0" prefWidth="155.0" text="Random Add">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-       <ComboBox fx:id="randomNumber" layoutX="203.0" layoutY="497.0" prefHeight="36.0" prefWidth="70.0" visibleRowCount="5">
+       <ComboBox fx:id="randomNumber" layoutX="203.0" layoutY="497.0" prefHeight="36.0" prefWidth="70.0" promptText="0" visibleRowCount="5">
            
        </ComboBox>
       <Line endX="1500.0" layoutX="50.0" layoutY="560.0" startX="-0.0" strokeWidth="3.0">
@@ -125,25 +141,13 @@
             </LinearGradient>
          </stroke>
       </Line>
-      <Line endX="260.0" layoutX="50.0" layoutY="228.0" startX="-0.0" strokeWidth="3.0">
+      <Line endX="260.0" layoutX="50.0" layoutY="220.0" startX="-0.0" strokeWidth="3.0">
          <stroke>
             <LinearGradient endX="1.0" endY="1.0" startY="1.0">
                <stops>
                   <Stop color="#dbe1ff99" />
                   <Stop color="#5b6cb0e5" offset="0.75" />
                   <Stop color="#5b6cb099" offset="0.95" />
-                  <Stop color="#dbe1ff99" offset="1.0" />
-               </stops>
-            </LinearGradient>
-         </stroke>
-      </Line>
-      <Line endX="260.0" layoutX="50.0" layoutY="300.0" startX="-0.0" strokeWidth="3.0">
-         <stroke>
-            <LinearGradient endX="1.0" endY="1.0" startY="1.0">
-               <stops>
-                  <Stop color="#dbe1ff99" />
-                  <Stop color="#5b6cb0e5" offset="0.75" />
-                  <Stop color="#5b6cb0cc" offset="0.95" />
                   <Stop color="#dbe1ff99" offset="1.0" />
                </stops>
             </LinearGradient>
@@ -210,7 +214,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label text="Time:" GridPane.rowIndex="3">
+            <Label text="Size:" GridPane.rowIndex="3">
                <font>
                   <Font size="18.0" />
                </font>
@@ -240,7 +244,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <Label fx:id="runningTime" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
+            <Label fx:id="runningSize" textAlignment="CENTER" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <font>
                   <Font size="18.0" />
                </font>
@@ -333,7 +337,7 @@
             <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
          </rowConstraints>
       </GridPane>
-      <ProgressBar fx:id="timeSliceSchedule" layoutX="1335.0" layoutY="180.0" prefWidth="200.0" progress="0.0" />
+      <ProgressBar fx:id="timeSliceSchedule" layoutX="1335.0" layoutY="189.0" prefWidth="200.0" progress="0.0" />
       <Button layoutX="653.0" layoutY="136.0" mnemonicParsing="false" prefHeight="36.0" prefWidth="105.0" text="Hang Up">
          <font>
             <Font size="18.0" />
@@ -349,12 +353,12 @@
             <Font size="18.0" />
          </font>
       </Label>
-      <Label contentDisplay="CENTER" layoutX="1230.0" layoutY="175.0" text="Time Slice:">
+      <Label contentDisplay="CENTER" layoutX="1229.0" layoutY="186.0" text="Time Slice:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Label contentDisplay="CENTER" layoutX="1195.0" layoutY="85.0" text="Total Progress:">
+      <Label contentDisplay="CENTER" layoutX="1195.0" layoutY="119.0" text="Total Progress:">
          <font>
             <Font size="18.0" />
          </font>
@@ -364,7 +368,7 @@
             <Font name="Georgia Italic" size="18.0" />
          </font>
       </Label>
-      <Line endX="380.0" layoutX="1150.0" layoutY="226.0" startX="-0.0" strokeWidth="3.0">
+      <Line endX="380.0" layoutX="1150.0" layoutY="220.0" startX="-0.0" strokeWidth="3.0">
          <stroke>
             <LinearGradient endX="1.0" endY="1.0" startY="1.0">
                <stops>
@@ -386,29 +390,29 @@
             </LinearGradient>
          </stroke>
       </Line>
-      <Label contentDisplay="CENTER" layoutX="1165.0" layoutY="130.0" text="Running Progress:">
+      <Label contentDisplay="CENTER" layoutX="1165.0" layoutY="151.0" text="Running Progress:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ProgressBar fx:id="runningProgressSchedule" layoutX="1335.0" layoutY="135.0" prefWidth="200.0" progress="0.0" />
-      <Label layoutX="57.0" layoutY="130.0" text="Time Slice:">
+      <ProgressBar fx:id="runningProgressSchedule" layoutX="1335.0" layoutY="157.0" prefWidth="200.0" progress="0.0" />
+      <Label layoutX="58.0" layoutY="97.0" text="Time Slice:">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <Button fx:id="setPS" layoutX="57.0" layoutY="249.0" mnemonicParsing="false" prefWidth="200.0" text="Priority Schedule">
+      <Button fx:id="setPS" layoutX="57.0" layoutY="175.0" mnemonicParsing="false" prefWidth="200.0" text="Priority Schedule">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Button fx:id="setRR" layoutX="57.0" layoutY="172.0" mnemonicParsing="false" prefWidth="200.0" text="RR Schedule">
+      <Button fx:id="setRR" layoutX="57.0" layoutY="133.0" mnemonicParsing="false" prefWidth="200.0" text="RR Schedule">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <TextField fx:id="timeSlice" layoutX="157.0" layoutY="131.0" prefHeight="23.0" prefWidth="100.0" />
-      <Label layoutX="58.0" layoutY="88.0" text="Current: Slice:">
+      <TextField fx:id="timeSlice" layoutX="153.0" layoutY="101.0" prefHeight="23.0" prefWidth="100.0" promptText="set time slice" />
+      <Label layoutX="58.0" layoutY="67.0" text="Current: Slice:">
          <font>
             <Font size="18.0" />
          </font>
@@ -428,11 +432,22 @@
             <Image url="@../../../Img/Grade0.bmp" />
          </image>
       </ImageView>
-      <Label fx:id="currentSlice" layoutX="179.0" layoutY="88.0">
+      <Label fx:id="currentSlice" layoutX="180.0" layoutY="67.0" prefHeight="24.0" prefWidth="70.0">
          <font>
             <Font size="18.0" />
          </font>
       </Label>
-      <ProgressBar fx:id="totalSchedule" layoutX="1335.0" layoutY="90.0" prefWidth="200.0" progress="0.0" />
+      <ProgressBar fx:id="totalSchedule" layoutX="1335.0" layoutY="122.0" prefWidth="200.0" progress="0.0" />
+      <Label contentDisplay="CENTER" layoutX="1185.0" layoutY="88.0" text="Memory Usage:">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
+      <ProgressBar fx:id="memorySchedule" layoutX="1335.0" layoutY="91.0" prefWidth="200.0" progress="0.0" />
+      <Label fx:id="restMemory" layoutX="971.0" layoutY="142.0">
+         <font>
+            <Font size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
